--- a/index.html
+++ b/index.html
@@ -2,31 +2,41 @@
 <html>
 	<head>
 		<title>Moran's Towing | LA Area</title>
-		<meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width">
     <meta name="format-detection" content="telephone=yes">
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
+				<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-responsive.min.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript">
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-34211271-1']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
 	</head>
 	<body>
-	  <div id="wrapper">
-	    <div id="header">
-	      <h1>Moran's Towing</h1>
-	      <img src="../images/truck.jpg" width="100%"/>
-	    </div>
-	    <div id="content">
-	      <h2>24/7 Los Angeles Area Service</h2>
-	      <div id="services">
-	        <ul>
-	          <li>Service 1</li>
-	          <li>Service 2</li>
-	          <li>Service 2</li>
-	          <li>Service 2</li>
-	        </ul>
-	      </div>
-	      <span id="contact">(123) 456-7890</span>
-	    </div>
+	  <div id="header">
+	    <h1>Moran's Towing</h1>
+	    <h2>24 Hour San Fernando Valley Area Service</h2>
+	  </div>
+	  <div class="container">
+			<img id="truck" src="images/truck-white.png"/>
+			<ul>
+				<li>Se habla espa&#241;ol</li>
+				<li>Towing and Roadside assistance</li>
+				<li>Flat bed towing</li>
+				<li>Battery jumps</li>
+				<li>Free junk car pickup</li>
+				<li>San Fernando Valley, Los Angeles,<br/>Glendale, &amp; Surrounding areas</li>
+			</ul>
+			<span id="phone" class="btn primary">(818) 429-7126</span>
 	  </div>
 	</body>
 </html>
