--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 			<ul>
 				<li>Se habla espa&#241;ol</li>
 				<li>Towing and Roadside assistance</li>
+				<li>Career mechanic experience</li>
+				<li>24/7 service</li>
 				<li>Flat bed towing</li>
 				<li>Battery jumps</li>
 				<li>Free junk car pickup</li>
