--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>Moran's Towing | LA Area</title>
+		<link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width">
     <meta name="format-detection" content="telephone=yes">
 		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
-				<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-responsive.min.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-responsive.min.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 		<script type="text/javascript">
 
