--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Moran's Towing | LA Area</title>
+		<title>Moran's Towing | 24/7 | LA</title>
 		<link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width">
     <meta name="format-detection" content="telephone=yes">
+		<meta name="description" content="Moran's Towing is a 24/7 flatbed towing and roadside assistance service. Service areas: San Fernando Valley, Los Angeles, Glendale, Tujunga, and Surrounding Areas. Additional services include: battery jumps and FREE junk car removal. (818) 429-7126">
+		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap-responsive.min.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
