--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<li>Battery jumps</li>
 				<li>Free junk car pickup</li>
 				<li>San Fernando Valley, Los Angeles,<br/>Glendale, &amp; Surrounding areas</li>
-				<li>Major Credit Cards Accepted</li>
+				<li>Major Credit Cards Accepted<br/><img id="cards" src="images/logos-small.png"/></li>
 			</ul>
 			<span id="phone" class="btn primary">(818) 429-7126</span>
 	  </div>
